# mxm-config

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
mxm_config/: __init__.py  installer.py  loader.py  resolver.py
mxm_config/examples/demo_config/: default.yaml
src/mxm/config/: __init__.py  cli.py  helpers.py  init_resolvers.py  installer.py  loader.py
tests/: conftests.py  test_api_make_subconfig.py  test_app_id_validation.py  test_cli.py  test_cli_install_config.py  test_helpers_make_subconfig.py  test_helpers_make_view.py  test_helpers_to_config_data.py  test_init_resolvers.py  test_initializer.py  test_installer.py  test_installer_deprecated_alias.py  test_installer_empty_and_shared.py  test_installer_seed_mode.py  test_installer_shipped_mode.py  test_loader.py  test_loader_helpers.py  test_reports.py  test_resolver.py
