[tool.poetry]
name = "mxm-config"
version = "0.6.1"
description = "MXM configuration loader and context resolver"
authors = ["mxm <contact@moneyexmachina.com>"]
license = "MIT"
readme = "README.md"
keywords = ["mxm", "configuration", "omegaconf", "settings"]
exclude = ["dist/*", "build/*", "*.egg-info/*", ".venv/*"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
packages = [{ include = "mxm", from = "src" }]
include = [
  { path = "LICENSE" },
  { path = "src/mxm/config/py.typed", format = "wheel" },
]
[tool.poetry.urls]
"Homepage" = "https://github.com/moneyexmachina/mxm-config"
"Repository" = "https://github.com/moneyexmachina/mxm-config"
"Issues" = "https://github.com/moneyexmachina/mxm-config/issues"
[tool.poetry.dependencies]
mxm-types = ">=0.3.1, <0.4.0"
python = ">=3.13,<3.15"
omegaconf = ">=2.3.0,<3.0.0"
typer = ">=0.16,<1.0"
click = ">=8.1.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
black = "^25.9.0"
isort = "^7.0.0"
ipython = "^9.5.0"
pytest = "^8.4.2"
pyright = "^1.1.407"

[tool.poetry.scripts]
mxm-config = "mxm.config.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
# ---- Tooling (package-local, MXM defaults) ----
[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["mxm"]
combine_as_imports = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E","F","I","B","UP","C90","RUF"]
ignore = ["E203","E501"]

[tool.ruff.lint.isort]
known-first-party = ["mxm"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

